adding Schemans in Swagg
